--- a/styles/main.css
+++ b/styles/main.css
@@ -221,11 +221,11 @@ body.homepage {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    max-width: 1720px;
+    max-width: 1700px;
     margin: 0 auto;
     padding: 0 10px;
-    border-left: 1px solid #eee;
-    border-right: 1px solid #eee;
+    border-left: 0px solid #eee;
+    border-right: 0px solid #eee;
 }
 
 /* 헤더 스타일 */
@@ -1024,7 +1024,7 @@ body.contact-page .form-group {
 /* Contact 페이지 푸터 스타일 */
 body.contact-page footer {
     width: 100%;
-    max-width: 1400px; /* 최대 너비 추가 */
+    max-width: none; /* 최대 너비 추가 */
     margin: 50px auto 0;
     display: flex;
     justify-content: space-between;
